Bug workaround: add-opens